--- a/quizzes/format.html
+++ b/quizzes/format.html
@@ -4,7 +4,10 @@
   <title> Text Formatting </title>
 </head>
 <body>
-<h3> Binary Math </h3>
-
+<h2> Binary Math </h2>
+<pre>   If <i>N</i> is a <i>K</i>-bit binary string
+   then the decimal representation of N can be derived as follows:
+   <ins>2<sup>0</sup> + 2<sup>1</sup>+ ... + 2<sup>k</ins>
+</pre>
 </body>
 </html>
