implemented simple table

--- a/quizzes/simple-table.html
+++ b/quizzes/simple-table.html
@@ -1,3 +1,15 @@
 <table border="1" width="100%">
-
+    <th>ID</th>
+    <th width = "50%">Name</th>
+    <th>Course</th>
+    <tr>
+        <td>928282134</td>
+        <td>Jojo Pal</td>
+        <td>CSE 136</td>
+    </tr>
+    <tr>
+        <td>29828812</td>
+        <td>Hal Abel</td>
+        <td>CSE 101</td>
+    </tr>
 </table>
